# repo

./: .gitignore  CMakeLists.txt  client.c  readme.md  server.c
driver/: .gitignore
driver/day01/: demo.c
driver/day02/3leds/: head.h  mychrdev.c  test.c
driver/day02/led/: mychrdev.c
driver/day02/mychrdev/: mychrdev.c  test.c
driver/day02/mychrdev2/: mychrdev.c  test.c
driver/day03/: mychrdev.c
driver/day03/ioctl/: head.h  mychrdev.c  test.c
driver/day03/ioctl2/: head.h  mychrdev.c  test.c
driver/day03/ioctl3/: Makefile  head.h  mychrdev.c  test.c  test2.c
driver/day03/ioctl_work/: bee.c  fan.c  gpio.h  head.h  led.c  motor.c  test.c
driver/day03/udev/: test.c
driver/day04/mychrdev/: mychrdev.c
driver/day04/mychrdev_work/: mychrdev.c  readme.md  test.c
driver/day04/spin_lock/: mychrdev.c
driver/day05/atomic/: head.h  mychrdev.c
driver/day05/block_io/: Makefile  mychrdev.c  proc1.c  proc2.c
driver/day05/mutex/: Makefile  mychrdev.c
driver/day05/semaphore/: mychrdev.c
driver/day06/epoll_tcp_server/: main.c
driver/day06/io_multiplexing/: Makefile  mychrdev.c  proc1.c  proc1_epoll.c  proc2.c
driver/day06/signal_io/: mychrdev.c  proc1.c  proc2.c
driver/day07/device_tree/: mychrdev.c  mychrdev2.c  stm32mp157a-fsmp1a.dts
driver/day08/gpio/: mychrdev.c  readme.md  stm32mp157a-fsmp1a.dts
driver/day08/gpio_new/: mychrdev.c  readme.md
driver/day08/timer/: mychrdev.c
include/: client.h  dbhandler.h  message.h  server.h
includes/: client.h  dbhandler.h  message.h  server.h  util.h
src/: client.c  dbhandler.c  message.c  server.c
(+43 files in other folders)
